--- a/src/components/About/index.module.scss
+++ b/src/components/About/index.module.scss
@@ -18,6 +18,7 @@
             margin-right: 40px;
             width: 500px;
             height: 500px;
+            pointer-events: none;
         }
 
         .text {
@@ -30,6 +31,17 @@
             p {
                 color: #FFFFFF;
                 font-size: 20px;
+
+                span {
+                    background: #232323;
+                    color: #232323;
+                    transition: 300ms;
+
+                    &:hover {
+                        background: transparent;
+                        color: #FFFFFF;
+                    }
+                }
             }
 
             .fact {
