--- a/src/components/Contact/index.module.scss
+++ b/src/components/Contact/index.module.scss
@@ -50,6 +50,7 @@
     font-weight: 700;
     margin-left: 5rem;
     margin-bottom: 3rem;
+    user-select: text;
 
     @media only screen and (max-width: 500px) {
         text-align: center;
