update responsive and content

--- a/src/components/Navbar/index.module.scss
+++ b/src/components/Navbar/index.module.scss
@@ -9,6 +9,10 @@
         font-size: 30px;
         font-weight: 700;
         color: #FFFFFF;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
     }
 
     .toggler {
