--- a/src/components/Home/index.module.scss
+++ b/src/components/Home/index.module.scss
@@ -33,18 +33,8 @@
         }
 
         @media only screen and (max-width: 800px) {
-            margin-right: 0;
-            .header {
-                text-align: center;
-
-                h1 {
-                    font-size: 40px;
-                }
-            }
 
             .text {
-                font-size: 30px;
-                text-align: center;
                 hr {
                     width: 50%;
                 }
@@ -52,18 +42,15 @@
         }
 
         @media only screen and (max-width: 655px) {
-            margin-right: 0;
             .header {
-                text-align: center;
                 h1 {
-                    font-size: 30px;
+                    font-size: 13vw;
                 }
                         
             }
 
             .text {
-                font-size: 20px;
-                text-align: center;
+                font-size: 6vw;
                 
                 hr {
                     width: 50%;
