--- a/src/components/About/index.module.scss
+++ b/src/components/About/index.module.scss
@@ -12,12 +12,12 @@
     .content {
         display: flex;
         flex-direction: row;
-        margin: 0 40px;
+        margin: 0 200px;
 
         .image {
             margin-right: 40px;
-            width: 500px;
-            height: 500px;
+            width: 50%;
+            height: 50%;
             pointer-events: none;
         }
 
@@ -61,10 +61,11 @@
         }
     }
 
-    @media only screen and (max-width: 900px) {
+    @media only screen and (max-width: 1420px) {
         .content {
             flex-direction: column;
             padding: 0 20px;
+            margin: 0 50px;
 
             .image {
                 display: block;
