--- a/src/components/Navbar/index.module.scss
+++ b/src/components/Navbar/index.module.scss
@@ -65,11 +65,15 @@
 }
 
 .navLinkActive {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    background: #1E1E1E;
-    padding: 10px 0;
+    display: none;
+
+    @media only screen and (max-width: 800px) {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        background: #1E1E1E;
+        padding: 10px 0;
+    }
 
     button {
         border: none;
